--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,54 @@
     transform: rotate(360deg);
   }
 }
+
+.main-container{
+  background-color: #c2bcc04b;
+}
+
+.heading{
+  text-align: center;
+  text-decoration: underline;
+  font-weight: 500;
+  color: #7887b4;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.open-modal-btn{
+  height: 30px;
+  width: 20%;
+  background-color: darkturquoise;
+  color: aliceblue;
+  position: relative;
+  left: 80%;
+  margin-bottom: 5px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+thead {
+  background-color: #f2f2f2;
+}
+
+thead tr td {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tr:hover {
+  background-color: #f1f1f1;
+}
+
